applied styling to fix buttons on iphone/safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,11 @@
     box-sizing: border-box; 
 }
 
+input, textarea {
+    -webkit-appearance: none;
+    border-radius: 0;
+}
+
 body {
     background-color: #D9D9D9;
 }
